<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_action_call"
        android:title="@string/navigation_contacts" />
    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_action_reminders"
        android:title="@string/navigation_health" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/navigation_settings" />
    <item
        android:id="@+id/navigation_sos"
        android:icon="@drawable/ic_action_sos"
        android:title="@string/navigation_sos" />
</menu>
