<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ContactsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/contactsToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ezivia_surface"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIconTint="@color/ezivia_primary"
        app:titleCentered="true"
        app:titleTextColor="@color/ezivia_on_surface" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactsToolbar"
        app:layout_constraintBottom_toTopOf="@id/contactsBottomContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_favorite_contact" />

    <TextView
        android:id="@+id/contactsEmptyView"
        style="@style/TextAppearance.Ezivia.BodyLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:text="@string/contacts_empty_state"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/contactsList"
        app:layout_constraintBottom_toBottomOf="@id/contactsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/contactsBottomContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addContactButton"
            style="@style/Widget.Ezivia.HomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/contacts_add_contact"
            android:textAllCaps="false"
            app:icon="@drawable/ic_action_person"
            app:iconTint="@color/ezivia_on_surface" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/manageFavoritesButton"
            style="@style/Widget.Ezivia.HomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_open_settings"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
